@@ -60,8 +60,11 @@ configuration: Release
 #  - Debug
 #  - Release
 
+before_build:
+- cmd: call c:\projects\win32Arduino\cmake\vs2010.bat
+
 build:
-  project: src\win32Arduino.sln
+  project: cmake\build\win32Arduino.sln
   verbosity: minimal
   
 #---------------------------------#
@@ -79,10 +82,6 @@ test_script:
 artifacts:
 - path: src\bin\Win32\Release\win32Arduino_unittest.x86.release.xml
   name: win32ArduinoTest.x86.release.xml
-#- path: nsis\bin\*.zip
-#  name: win32Arduino win32 portable
-#- path: nsis\bin\*.exe
-#  name: win32Arduino win32 setup
   
 #---------------------------------#
 #     deployment configuration    #
