@@ -1,26 +1,0 @@
-﻿
-Microsoft Visual Studio Solution File, Format Version 11.00
-# Visual C++ Express 2010
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "win32Arduino", "win32arduino\win32Arduino.vcxproj", "{B863DFCD-CF0A-400D-9B19-BF8CE093C276}"
-EndProject
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "win32Arduino_unittest", "win32Arduino_unittest\win32Arduino_unittest.vcxproj", "{910CD814-EEE8-49B0-8D7F-CE96CFA954F4}"
-EndProject
-Global
-	GlobalSection(SolutionConfigurationPlatforms) = preSolution
-		Debug|Win32 = Debug|Win32
-		Release|Win32 = Release|Win32
-	EndGlobalSection
-	GlobalSection(ProjectConfigurationPlatforms) = postSolution
-		{B863DFCD-CF0A-400D-9B19-BF8CE093C276}.Debug|Win32.ActiveCfg = Debug|Win32
-		{B863DFCD-CF0A-400D-9B19-BF8CE093C276}.Debug|Win32.Build.0 = Debug|Win32
-		{B863DFCD-CF0A-400D-9B19-BF8CE093C276}.Release|Win32.ActiveCfg = Release|Win32
-		{B863DFCD-CF0A-400D-9B19-BF8CE093C276}.Release|Win32.Build.0 = Release|Win32
-		{910CD814-EEE8-49B0-8D7F-CE96CFA954F4}.Debug|Win32.ActiveCfg = Debug|Win32
-		{910CD814-EEE8-49B0-8D7F-CE96CFA954F4}.Debug|Win32.Build.0 = Debug|Win32
-		{910CD814-EEE8-49B0-8D7F-CE96CFA954F4}.Release|Win32.ActiveCfg = Release|Win32
-		{910CD814-EEE8-49B0-8D7F-CE96CFA954F4}.Release|Win32.Build.0 = Release|Win32
-	EndGlobalSection
-	GlobalSection(SolutionProperties) = preSolution
-		HideSolutionNode = FALSE
-	EndGlobalSection
-EndGlobal
