@@ -3,6 +3,7 @@ Changes for 2.0.0:
 * Fixed issue #1 - Rename library namespace to a better name.
 * Fixed issue #3 - Refactor the time strategies.
 * Fixed issue #6 - Remove template functions and replace by macro definitions.
+* Fixed issue #7 - Add cmake support to be able to generate project files for each version of Visual Studio.
 
 Changes for 1.4.0:
 
